--- a/package.json
+++ b/package.json
@@ -1,36 +1,71 @@
 {
   "name": "fine",
-  "type": "module",
   "version": "0.0.0",
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "description": "",
+  "author": "Jussi Nevavuori <nevavuori.jussi@gmail.com>",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jussinevavuori/fine.git"
+  },
+  "dependencies": {
+    "@types/react": "^19.0.3",
+    "zod": "^3.24.1"
+  },
+  "devDependencies": {
+    "@types/bun": "^1.1.10",
+    "bun-plugin-dts": "^0.3.0",
+    "chalk": "^5.4.1",
+    "react": "^19.0.0"
+  },
   "exports": {
-    "types": "./dist/index.d.ts",
-    "import": "./dist/index.js",
-    "require": "./dist/index.cjs"
+    ".": {
+      "types": "./dist/root/root.index.d.ts",
+      "import": "./dist/root/root.index.js",
+      "require": "./dist/root/root.index.cjs"
+    },
+    "./client": {
+      "types": "./dist/client/client.index.d.ts",
+      "import": "./dist/client/client.index.js",
+      "require": "./dist/client/client.index.cjs"
+    },
+    "./server": {
+      "types": "./dist/server/server.index.d.ts",
+      "import": "./dist/server/server.index.js",
+      "require": "./dist/server/server.index.cjs"
+    },
+    "./next": {
+      "types": "./dist/next/next.index.d.ts",
+      "import": "./dist/next/next.index.js",
+      "require": "./dist/next/next.index.cjs"
+    },
+    "./react-client": {
+      "types": "./dist/react-client/react-client.index.d.ts",
+      "import": "./dist/react-client/react-client.index.js",
+      "require": "./dist/react-client/react-client.index.cjs"
+    },
+    "./react-server": {
+      "types": "./dist/react-server/react-server.index.d.ts",
+      "import": "./dist/react-server/react-server.index.js",
+      "require": "./dist/react-server/react-server.index.cjs"
+    }
   },
-  "scripts": {
-    "build": "bun run build.ts",
-    "prepublishOnly": "bun run build"
-  },
+  "bugs": "https://github.com/jussinevavuori/fine/issues",
+  "description": "",
   "files": [
     "dist"
   ],
+  "homepage": "https://github.com/jussinevavuori/fine#readme",
   "keywords": [
-    "bun"
+    "bun",
+    "fine-grained",
+    "authorization",
+    "abac",
+    "rbac"
   ],
   "license": "MIT",
-  "homepage": "https://github.com/wobsoriano/pkg-name#readme",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/wobsoriano/pkg-name.git"
+  "scripts": {
+    "build": "bun run build.ts",
+    "watch:build": "bun run --watch build.ts --watch ",
+    "prepublishOnly": "bun run build"
   },
-  "bugs": "https://github.com/wobsoriano/pkg-name/issues",
-  "author": "Robert Soriano <sorianorobertc@gmail.com>",
-  "devDependencies": {
-    "bun-plugin-dts": "^0.3.0",
-    "@types/bun": "^1.1.10"
-  }
+  "type": "module"
 }
