--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.28.1",
+    "@eslint/js": "^9.22.0",
+    "eslint": "^9.22.0",
     "prettier": "3.4.2",
-    "prettier-plugin-tailwindcss": "^0.6.11",
     "tsup": "^8.4.0",
-    "typescript": "^5",
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.26.1",
     "vitest": "^3.0.8"
   },
   "author": "Jussi Nevavuori <nevavuori.jussi@gmail.com>",
