--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "for d in packages/*; do (cd $d && pnpm run build || exit 1); done",
     "lint": "for d in packages/*; do (cd $d && pnpm run lint || exit 1); done",
     "test": "for d in packages/*; do (cd $d && pnpm run test || exit 1); done",
-    "release": "pnpm run build && changeset publish"
+    "release": "pnpm run build && changeset publish",
+    "ci": "pnpm run lint && pnpm run test && pnpm run build"
   },
   "devDependencies": {
     "@changesets/cli": "^2.28.1",
