--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "pnpm -r run lint",
     "test": "pnpm -r run test",
     "release": "pnpm run build && changeset publish",
-    "ci": "pnpm run lint && pnpm run test && pnpm run build"
+    "ci": "pnpm run build && pnpm run lint && pnpm run test"
   },
   "devDependencies": {
     "@changesets/cli": "^2.28.1",
