--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -3,7 +3,11 @@
   "description": "Kilpi next.js integration",
   "version": "0.1.1",
   "license": "MIT",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
   "type": "module",
+  "private": false,
   "scripts": {
     "build": "tsup src/index.ts --format cjs,esm --dts",
     "lint": "eslint && tsc",
