--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@kilpi/www",
   "description": "Kilpi documentation site build with Starlight",
-  "version": "0.4.0",
+  "version": "0.1.0",
   "license": "MIT",
   "type": "module",
-  "private": false,
+  "private": true,
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
