--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -13,9 +13,26 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^4.2.1",
     "@astrojs/starlight": "^0.32.2",
+    "@astrojs/starlight-tailwind": "^3.0.0",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@tailwindcss/vite": "^4.0.14",
+    "@types/react": "^19.0.11",
+    "@types/react-dom": "^19.0.4",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "astro": "^5.1.5",
-    "sharp": "^0.32.6"
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "dedent": "^1.5.3",
+    "lucide-react": "^0.482.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-syntax-highlighter": "^15.6.1",
+    "sharp": "^0.33.5",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss": "^4.0.14",
+    "tailwindcss-animate": "^1.0.7"
   },
   "author": "Jussi Nevavuori <nevavuori.jussi@gmail.com>",
   "homepage": "https://kilpi.vercel.app",
