--- a/packages/react-server/package.json
+++ b/packages/react-server/package.json
@@ -11,7 +11,7 @@
     "build": "tsup src/index.ts --format cjs,esm --dts",
     "lint": "eslint && tsc",
     "test": "vitest run",
-    "test:watch": "vitest watch"
+    "dev": "vitest watch"
   },
   "dependencies": {
     "@kilpi/core": "workspace:*",
