--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@kilpi/core",
-  "description": "Kilpi core",
+  "name": "@kilpi/client",
+  "description": "Kilpi client",
   "version": "0.9.0",
   "license": "MIT",
   "main": "dist/index.js",
@@ -12,12 +12,17 @@
     "build": "tsup src/index.ts --format cjs,esm --dts",
     "build:watch": "tsup src/index.ts --format cjs,esm --dts --watch",
     "lint": "eslint && tsc",
+    "lint:eslint": "eslint",
+    "lint:tsc": "tsc",
     "test": "vitest run",
     "dev": "vitest watch"
   },
   "dependencies": {
     "superjson": "^2.2.2",
     "zod": "^3.24.1"
+  },
+  "devDependencies": {
+    "@kilpi/core": "workspace:*"
   },
   "author": "Jussi Nevavuori <nevavuori.jussi@gmail.com>",
   "homepage": "https://kilpi.vercel.app",
