feat: create example project

--- a/apps/docs/tsconfig.json
+++ b/apps/docs/tsconfig.json
@@ -6,6 +6,7 @@
     "jsx": "react-jsx",
     "jsxImportSource": "react",
     "baseUrl": ".",
+    "types": ["@types/bun"],
     "paths": {
       "@/*": ["./src/*"]
     }
