docs(next-rsc-demo): fix bootstrap script

--- a/examples/next-rsc-demo/package.json
+++ b/examples/next-rsc-demo/package.json
@@ -7,7 +7,7 @@
     "build": "bun --bun next build",
     "start": "bun --bun next start",
     "lint": "bun --bun next lint",
-    "bootstrap": "bun install && bun run build && bun run start"
+    "bootstrap": "bun run ./src/scripts/env.ts && bun run ./src/scripts/seed.ts && bun install && bun run build && bun run start"
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
