--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -25,12 +25,14 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "astro": "^5.1.5",
     "astro-expressive-code": "^0.40.2",
+    "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "dedent": "^1.5.3",
     "lucide-react": "^0.482.0",
+    "nanoid": "^5.1.5",
     "pagefind": "^1.3.0",
     "react": "^19.0.0",
     "react-device-detect": "^2.2.3",
