--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,6 +6,12 @@
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
+    }
+  },
   "type": "module",
   "private": false,
   "scripts": {
