--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -42,7 +42,8 @@
     "sharp": "^0.33.5",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.17",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "tslib": "^2.8.1"
   },
   "author": "Jussi Nevavuori <nevavuori.jussi@gmail.com>",
   "homepage": "https://kilpi.vercel.app",
