--- a/examples/next-client-demo/package.json
+++ b/examples/next-client-demo/package.json
@@ -13,7 +13,7 @@
 		"@hookform/resolvers": "^4.1.3",
 		"@kilpi/client": "^0.15.0",
 		"@kilpi/core": "^0.19.0",
-		"@kilpi/react-client": "workspace:*",
+		"@kilpi/react-client": "0.3.13",
 		"@kilpi/react-server": "^0.9.12",
 		"@radix-ui/react-label": "^2.1.2",
 		"@radix-ui/react-slot": "^1.1.2",
