--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,6 @@
 {
-  "printWidth": 100,
-  "plugins": ["prettier-plugin-tailwindcss"]
+	"printWidth": 100,
+	"plugins": [
+		"prettier-plugin-tailwindcss"
+	]
 }
