--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,13 @@
 	"printWidth": 100,
 	"plugins": [
 		"prettier-plugin-tailwindcss"
+	],
+	"overrides": [
+		{
+			"files": "**/*.mdx",
+			"options": {
+				"printWidth": 80
+			}
+		}
 	]
 }
