--- a/examples/next-js/package.json
+++ b/examples/next-js/package.json
@@ -1,31 +1,41 @@
 {
-  "name": "next-js",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
-    "start": "next start",
-    "lint": "eslint"
-  },
-  "dependencies": {
-    "@kilpi/client": "^0.15.2",
-    "@kilpi/core": "^0.19.1",
-    "@kilpi/react-client": "^0.3.16",
-    "@kilpi/react-server": "^0.9.13",
-    "next": "15.5.4",
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.4",
-    "tailwindcss": "^4",
-    "typescript": "^5"
-  }
+	"name": "next-js",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "bun --bun next dev --turbopack",
+		"build": "bun --bun next build --turbopack",
+		"start": "bun --bun next start",
+		"lint": "bun --bun eslint",
+		"bootstrap": "bun run ./src/scripts/env.ts && bun run ./src/scripts/seed.ts && bun install && bun run build && bun run start"
+	},
+	"dependencies": {
+		"@hookform/resolvers": "^5.2.2",
+		"@kilpi/client": "^1.0.0",
+		"@kilpi/core": "^1.0.0",
+		"@kilpi/react-client": "^1.0.0",
+		"@kilpi/react-server": "^1.0.0",
+		"@radix-ui/react-label": "^2.1.7",
+		"@radix-ui/react-slot": "^1.2.3",
+		"better-auth": "^1.3.27",
+		"kysely-bun-sqlite": "^0.4.0",
+		"next": "15.5.4",
+		"next-themes": "^0.4.6",
+		"react": "^19.2.0",
+		"react-dom": "^19.2.0",
+		"react-hook-form": "^7.65.0",
+		"sonner": "^2.0.7",
+		"zod": "^4.1.12"
+	},
+	"devDependencies": {
+		"@eslint/eslintrc": "^3",
+		"@tailwindcss/postcss": "^4",
+		"@types/node": "^20",
+		"@types/react": "^19.2.2",
+		"@types/react-dom": "^19.2.1",
+		"eslint": "^9",
+		"eslint-config-next": "15.5.4",
+		"tailwindcss": "^4",
+		"typescript": "^5"
+	}
 }
