--- a/package.json
+++ b/package.json
@@ -1,43 +1,49 @@
 {
-	"name": "kilpi",
-	"description": "Kilpi monorepo",
-	"version": "0.0.0",
-	"type": "module",
-	"private": false,
-	"license": "MIT",
-	"scripts": {
-		"build": "pnpm -r --filter \"./packages/**\" run build",
-		"lint": "pnpm -r --filter \"./packages/**\" run lint",
-		"test": "pnpm -r --filter \"./packages/**\" run test",
-		"release": "pnpm run ci && changeset publish",
-		"ci": "pnpm run build && pnpm run lint && pnpm run test"
-	},
-	"devDependencies": {
-		"@changesets/cli": "^2.28.1",
-		"@eslint/js": "^9.22.0",
-		"@types/node": "^22.13.10",
-		"eslint": "^9.22.0",
-		"prettier": "3.4.2",
-		"tslib": "^2.8.1",
-		"tsup": "^8.4.0",
-		"typescript": "^5.9.2",
-		"typescript-eslint": "^8.26.1",
-		"vitest": "^3.0.8"
-	},
-	"author": "Jussi Nevavuori <nevavuori.jussi@gmail.com>",
-	"homepage": "https://kilpi.vercel.app",
-	"bugs": "https://github.com/jussinevavuori/kilpi/issues",
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/jussinevavuori/kilpi.git"
-	},
-	"keywords": [
-		"fine-grained",
-		"authorization",
-		"abac",
-		"rbac"
-	],
-	"dependencies": {
-		"prettier-plugin-tailwindcss": "^0.6.11"
-	}
+  "name": "kilpi",
+  "description": "Kilpi monorepo",
+  "version": "0.0.0",
+  "type": "module",
+  "private": false,
+  "license": "MIT",
+  "scripts": {
+    "build": "pnpm -r --filter \"./packages/**\" run build",
+    "lint": "pnpm -r --filter \"./packages/**\" run lint",
+    "test": "pnpm -r --filter \"./packages/**\" run test",
+    "release": "pnpm run ci && changeset publish",
+    "ci": "pnpm run build && pnpm run lint && pnpm run test"
+  },
+  "devDependencies": {
+    "@changesets/cli": "^2.29.7",
+    "@eslint/js": "^9.39.1",
+    "@types/node": "^22.19.0",
+    "eslint": "^9.39.1",
+    "prettier": "3.6.2",
+    "tslib": "^2.8.1",
+    "tsup": "^8.5.0",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.3",
+    "vitest": "^3.2.4"
+  },
+  "author": "Jussi Nevavuori <nevavuori.jussi@gmail.com>",
+  "homepage": "https://kilpi.vercel.app",
+  "bugs": "https://github.com/jussinevavuori/kilpi/issues",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jussinevavuori/kilpi.git"
+  },
+  "keywords": [
+    "fine-grained",
+    "authorization",
+    "abac",
+    "rbac"
+  ],
+  "dependencies": {
+    "prettier-plugin-tailwindcss": "^0.6.14"
+  },
+  "": [],
+  "workspaces": [
+    "packages/*",
+    "apps/*",
+    "local_testing/*"
+  ]
 }
