--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -28,7 +28,7 @@
 	"dependencies": {
 		"@kilpi/client": "workspace:*",
 		"@kilpi/core": "workspace:*",
-		"react": "^19.0.0",
+		"react": "^19.2.0",
 		"zod": "^3.24.1"
 	},
 	"devDependencies": {
@@ -38,7 +38,8 @@
 		"@testing-library/user-event": "^14.6.1",
 		"@types/react": "^19.0.0",
 		"@vitejs/plugin-react": "^5.0.4",
-		"react-dom": "19"
+		"jsdom": "^27.1.0",
+		"react-dom": "^19.2.0"
 	},
 	"author": "Jussi Nevavuori <nevavuori.jussi@gmail.com>",
 	"homepage": "https://kilpi.vercel.app",
